--- a/EDA-FINAL.ipynb
+++ b/EDA-FINAL.ipynb
@@ -11,33 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview\n",
-    "\n",
-    "In this project, you will step into the shoes of an entry-level data analyst at an online retail company, helping interpret real-world data to help make a key business decision."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Case Study\n",
-    "In this project, you will be working with transactional data from an online retail store. The dataset contains information about customer purchases, including product details, quantities, prices, and timestamps. Your task is to explore and analyze this dataset to gain insights into the store's sales trends, customer behavior, and popular products. \n",
-    "\n",
-    "By conducting exploratory data analysis, you will identify patterns, outliers, and correlations in the data, allowing you to make data-driven decisions and recommendations to optimize the store's operations and improve customer satisfaction. Through visualizations and statistical analysis, you will uncover key trends, such as the busiest sales months, best-selling products, and the store's most valuable customers. Ultimately, this project aims to provide actionable insights that can drive strategic business decisions and enhance the store's overall performance in the competitive online retail market.\n",
-    "\n",
-    "## Prerequisites\n",
-    "\n",
-    "Before starting this project, you should have some basic knowledge of Python programming and Pandas. In addition, you may want to use the following packages in your Python environment:\n",
-    "\n",
-    "- pandas\n",
-    "- numpy\n",
-    "- seaborn\n",
-    "- matplotlib\n",
-    "\n",
-    "These packages should already be installed in Coursera's Jupyter Notebook environment, however if you'd like to install additional packages that are not included in this environment or are working off platform you can install additional packages using `!pip install packagename` within a notebook cell such as:\n",
-    "\n",
-    "- `!pip install pandas`\n",
-    "- `!pip install matplotlib`"
+    "EDA Performed by: [Sougat Dey](#https://www.linkedin.com/in/sougatdey/)"
    ]
   },
   {
@@ -55,9 +29,6 @@
    "metadata": {},
    "source": [
     "## Dataset\n",
-    "\n",
-    "The dataset you will be working with is the \"Online Retail\" dataset. It contains transactional data of an online retail store from 2010 to 2011. The dataset is available as a .xlsx file named `Online Retail.xlsx`. This data file is already included in the Coursera Jupyter Notebook environment, however if you are working off-platform it can also be downloaded [here](https://archive.ics.uci.edu/ml/machine-learning-databases/00352/Online%20Retail.xlsx).\n",
-    "\n",
     "The dataset contains the following columns:\n",
     "\n",
     "- InvoiceNo: Invoice number of the transaction\n",
@@ -177,6 +148,7 @@
    },
    "outputs": [],
    "source": [
+    "#making a copy of the original dataset\n",
     "master_df = original_df.copy()"
    ]
   },
